--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,12 @@
 services:
+  pg:
+    container_name: flaskDb
+    image: postgres
+    env_file:
+      - .env
+    ports:
+      - 5432:5432
+
   api:
     container_name: flaskApi
     build:
@@ -7,21 +15,10 @@ services:
     volumes:
       - ./app:/code/app
       - ./migrations:/code/migrations
-    expose:
-      - 5000
     ports:
       - 5000:5000
     depends_on:
       - pg
     environment:
       FLASK_ENV: development
-    # command: bash -c 'flask db upgrade && flask run'
-  pg:
-    container_name: flaskDb
-    image: postgres
-    env_file:
-      - .env
-    expose:
-      - 5432
-    ports:
-      - 5432:5432
+    command: bash -c 'while !</dev/tcp/pg/5432; do sleep 1; done; flask db upgrade && flask run -h 0.0.0.0'
